# Android-VINS

./: .gitignore
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/src/vins_estimator/src/: estimator_node.cpp
app/src/main/cpp/src/vins_estimator/src/loop-closure/: keyframe.cpp
app/src/main/java/com/hezhaoxin/solomon/vins_android/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
